// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder renders correctly with type="block" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: 0%;
  }

  to {
    left: 75%;
  }
}

.emotion-0.emotion-0 {
  position: relative;
  display: block;
  overflow: hidden;
}

.emotion-1 {
  min-height: 200px;
}

.emotion-1.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 16px 16px;
  margin-bottom: 16px;
  border-style: solid;
  border-width: 1px;
  border-color: #dce1eb;
  border-radius: 4px;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
}

.emotion-4 {
  width: 32px;
  height: 32px;
  border-radius: 12px;
  background-color: #dce1eb;
}

.emotion-5 {
  height: 12px;
  width: 120px;
  margin-left: 8px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.emotion-6 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-6.emotion-6 {
  margin-top: 8px;
  margin-bottom: 8px;
}

.emotion-14 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          />
          <div
            class="emotion-5"
          />
        </div>
        <hr
          class="emotion-6"
        />
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          />
          <div
            class="emotion-5"
          />
        </div>
        <hr
          class="emotion-6"
        />
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          />
          <div
            class="emotion-5"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-14"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: 0%;
  }

  to {
    left: 75%;
  }
}

.emotion-0.emotion-0 {
  position: relative;
  display: block;
  overflow: hidden;
}

.emotion-1 {
  min-height: 1600 px;
}

.emotion-3 {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 0;
  padding-right: 0;
  max-width: undefined;
}

@media (min-width: 576px) {
  .emotion-3 {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .emotion-3 {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .emotion-3 {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .emotion-3 {
    max-width: 1140px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 100%;
  position: relative;
  width: 100%;
  min-height: 1px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-flex: 0 0 25%;
  -ms-flex: 0 0 25%;
  flex: 0 0 25%;
  max-width: 25%;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  margin-bottom: 16px;
  border-style: solid;
  border-width: 1px;
  border-color: #dce1eb;
  border-radius: 4px;
}

.emotion-9 {
  width: 32px;
  height: 32px;
  border-radius: 12px;
  background-color: #dce1eb;
}

.emotion-10 {
  height: 12px;
  width: 120px;
  margin-left: 8px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.emotion-46 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
          <div
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8"
            >
              <div
                class="emotion-9"
              />
              <div
                class="emotion-10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-46"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="box" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: 0%;
  }

  to {
    left: 75%;
  }
}

.emotion-0.emotion-0 {
  position: relative;
  display: block;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #dce1eb;
}

.emotion-1.emotion-1 {
  width: 25px;
  height: 25px;
  margin-right: 8px;
  margin-left: 8px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.emotion-2 {
  width: 8.333333333333334px;
  height: 8.333333333333334px;
  border-radius: 8.333333333333334px;
  background-color: #dce1eb;
}

.emotion-3 {
  height: 12px;
  width: 12.5px;
  margin-left: 8px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.emotion-3.emotion-3 {
  width: 12.5px;
  margin-top: 24px;
}

.emotion-4 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
      <div
        class="emotion-3"
      />
    </div>
    <div
      class="emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="donut" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: 0%;
  }

  to {
    left: 75%;
  }
}

.emotion-0.emotion-0 {
  position: relative;
  display: block;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.emotion-2 {
  position: relative;
  height: 206px;
}

.emotion-3 {
  transform-origin: 50% 50%;
  stroke: #dce1eb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 16px;
  margin-left: 16px;
}

.emotion-6 {
  height: 12px;
  width: 120px;
  margin-left: 8px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.emotion-13 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <svg
          style="min-height: 206px; height: 206px; min-width: 206px; width: 206px; transform: rotate(-90deg);"
        >
          <circle
            class="emotion-3"
            cx="103"
            cy="103"
            r="90"
          />
        </svg>
      </div>
      <ul
        class="emotion-4"
      >
        <li
          class="emotion-5"
        >
          <div
            class="emotion-6"
          />
        </li>
        <li
          class="emotion-5"
        >
          <div
            class="emotion-6"
          />
        </li>
        <li
          class="emotion-5"
        >
          <div
            class="emotion-6"
          />
        </li>
        <li
          class="emotion-5"
        >
          <div
            class="emotion-6"
          />
        </li>
      </ul>
    </div>
    <div
      class="emotion-13"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="line" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: 0%;
  }

  to {
    left: 75%;
  }
}

.emotion-0.emotion-0 {
  position: relative;
  display: block;
  overflow: hidden;
}

.emotion-1 {
  height: 12px;
  width: 120px;
  margin-left: 8px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.emotion-1.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.emotion-2 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="list" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: 0%;
  }

  to {
    left: 75%;
  }
}

.emotion-0.emotion-0 {
  position: relative;
  display: block;
  overflow: hidden;
}

.emotion-2 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-2.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.emotion-2>.emotion-3:nth-of-type(even) {
  background-color: #fafafb;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 48px;
  padding: 4px 8px;
}

.emotion-5.emotion-5 {
  width: 240px;
}

.emotion-6 {
  height: 12px;
  width: 120px;
  margin-left: 8px;
  border-radius: 10px;
  background-color: #dce1eb;
}

.emotion-7.emotion-7 {
  width: 360px;
}

.emotion-15 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <ul
      class="emotion-1 emotion-2"
    >
      <li
        class="emotion-3 emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          />
        </div>
        <div
          class="emotion-7"
        >
          <div
            class="emotion-6"
          />
        </div>
      </li>
      <li
        class="emotion-3 emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          />
        </div>
        <div
          class="emotion-7"
        >
          <div
            class="emotion-6"
          />
        </div>
      </li>
    </ul>
    <div
      class="emotion-15"
    />
  </div>
</DocumentFragment>
`;

exports[`Placeholder renders correctly with type="slider" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: 0%;
  }

  to {
    left: 75%;
  }
}

.emotion-0.emotion-0 {
  position: relative;
  display: block;
  overflow: hidden;
}

.emotion-1 {
  height: 277px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 0 0 undefined;
  -ms-flex: 0 0 undefined;
  flex: 0 0 undefined;
}

.emotion-2 {
  border: 1px solid #dce1eb;
  border-radius: 4px;
  width: 240px;
  height: 261px;
  margin-right: 16px;
}

.emotion-3 {
  border: 1px solid #dce1eb;
  background-color: #dce1eb;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  width: 240px;
  height: 77px;
}

.emotion-10 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      rgba(255, 255, 255, 0),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0)
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
    </div>
    <div
      class="emotion-10"
    />
  </div>
</DocumentFragment>
`;
